--- a/app/src/main/res/layout/menu_principal.xml
+++ b/app/src/main/res/layout/menu_principal.xml
@@ -4,13 +4,15 @@
     android:layout_height="match_parent"
     android:id="@+id/parent"
     android:layout_centerVertical="true"
+    android:layout_centerHorizontal="true"
+    android:background="@drawable/Rz_104"
     >
 
     <TextView
         android:id="@+id/nomjeu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="test"
+        android:text="@string/app_name"
         android:layout_centerHorizontal="true"
         android:background="@drawable/boutonhdpi"
 
@@ -21,7 +23,6 @@
         android:layout_height="wrap_content"
         android:text="@string/Nouvellepartie"
         android:layout_below="@id/nomjeu"
-
     />
 
 
