Debut menu principal et quelques test en parallèles

--- a/app/src/main/res/layout/menu_principal.xml
+++ b/app/src/main/res/layout/menu_principal.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/parent"
-    android:layout_centerVertical="true"
+
     android:layout_centerHorizontal="true"
     android:background="@drawable/Rz_104"
     >
@@ -21,9 +21,10 @@
         android:id="@+id/nouvellepartie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Nouvellepartie"
+        android:text="@string/Jouer"
         android:layout_below="@id/nomjeu"
         android:layout_centerHorizontal="true"
+
     />
 
 
