J'ai changé des trucs sur le bouton, mais le layout me laisse perplexe.

--- a/app/src/main/res/layout/menu_principal.xml
+++ b/app/src/main/res/layout/menu_principal.xml
@@ -13,19 +13,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/boutonhdpi"
+        android:background="@drawable/bouton"
 
-    />
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/nouvellepartie"
+        android:layout_alignEnd="@+id/nouvellepartie" />
     <Button
         android:id="@+id/nouvellepartie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Jouer"
-        android:layout_below="@id/nomjeu"
-        android:layout_centerHorizontal="true"
 
-    />
+        android:layout_above="@+id/tutoriel"
+        android:layout_alignLeft="@+id/tutoriel"
+        android:layout_alignStart="@+id/tutoriel" />
 
 
     <Button
@@ -33,22 +34,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Tutoriel"
-        android:layout_below="@id/nouvellepartie"
-        android:layout_centerHorizontal="true"/>
+        android:layout_above="@+id/defis"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:id="@+id/defis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Défis"
-        android:layout_below="@id/tutoriel"
-        android:layout_centerHorizontal="true"/>
+        android:layout_above="@+id/button"
+        android:layout_alignLeft="@+id/tutoriel"
+        android:layout_alignStart="@+id/tutoriel" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Paramètres"
-        android:layout_below="@id/defis"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/button" />
 
 </RelativeLayout>
