--- a/app/src/main/res/layout/menu_principal.xml
+++ b/app/src/main/res/layout/menu_principal.xml
@@ -26,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Jouer"
+        android:background="@drawable/bouton"
 
         android:layout_above="@+id/tutoriel"
 
@@ -44,6 +45,7 @@
         android:layout_centerHorizontal="true"
         android:layout_alignLeft="@+id/buttonparam"
         android:layout_alignRight="@+id/buttonparam"
+        android:background="@drawable/bouton"
         android:layout_alignStart="@+id/buttonparam"/>
 
     <Button
@@ -54,6 +56,7 @@
         android:layout_above="@+id/buttonparam"
         android:layout_alignLeft="@+id/buttonparam"
         android:layout_alignRight="@+id/buttonparam"
+        android:background="@drawable/bouton"
         android:layout_alignStart="@+id/buttonparam" />
 
     <Button
@@ -63,6 +66,7 @@
         android:text="@string/Paramètres"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/bouton"
          />
 
 </RelativeLayout>
