--- a/app/src/main/res/layout/menu_principal.xml
+++ b/app/src/main/res/layout/menu_principal.xml
@@ -21,7 +21,8 @@
         android:layout_centerInParent="true"
         android:layout_alignLeft="@+id/buttonparam"
         android:layout_alignRight="@+id/buttonparam"
-        android:layout_alignStart="@+id/buttonparam"/>
+        android:layout_alignStart="@+id/buttonparam"
+        android:layout_marginBottom="50dip"/>
     <Button
         android:id="@+id/nouvellepartie"
         android:layout_width="wrap_content"
@@ -29,12 +30,13 @@
         android:text="@string/Jouer"
         android:background="@drawable/bouton"
 
+        android:layout_marginBottom="30dip"
         android:layout_above="@+id/tutoriel"
-
         android:layout_centerInParent="true"
         android:layout_alignLeft="@+id/buttonparam"
         android:layout_alignRight="@+id/buttonparam"
-        android:layout_alignStart="@+id/buttonparam"/>
+        android:layout_alignStart="@+id/buttonparam"
+        />
 
 
     <Button
@@ -43,6 +45,8 @@
         android:layout_height="wrap_content"
         android:text="@string/Tutoriel"
         android:layout_above="@+id/defis"
+
+        android:layout_marginBottom="30dip"
         android:layout_centerHorizontal="true"
         android:layout_alignLeft="@+id/buttonparam"
         android:layout_alignRight="@+id/buttonparam"
@@ -54,6 +58,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Défis"
+
+        android:layout_marginBottom="30dip"
         android:layout_above="@+id/buttonparam"
         android:layout_alignLeft="@+id/buttonparam"
         android:layout_alignRight="@+id/buttonparam"
