--- a/app/src/main/res/layout/plateau.xml
+++ b/app/src/main/res/layout/plateau.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@drawable/Rz_104">
+    android:background="@drawable/rz_104">
     <TableLayout
         android:layout_width="350dip"
         android:layout_height="350dip"
